# Aula_C114

./: .gitignore  README.md  pyproject.toml  report.html
exercicio_aula/src/meu_projeto/: cli.py
tests/: test_cli.py
